fix: use LocalDataset

--- a/effects-of-retraining/effects_of_retraining.ipynb
+++ b/effects-of-retraining/effects_of_retraining.ipynb
@@ -1097,18 +1097,14 @@
       ],
       "source": [
         "# initial static model training\n",
-        "input_data = tb.OnlineDataset.from_pd(\n",
-        "  id=\"input_stream_0\",\n",
+        "input_data = tb.LocalDataset.from_pd(\n",
         "  df=data_parts[0],\n",
-        "  key_field=\"index\",\n",
-        "  load_if_exists=True\n",
+        "  key_field=\"index\"\n",
         ").get_model_inputs(numerical_fields = numerical_fields)\n",
         "\n",
-        "label_data = tb.OnlineDataset.from_pd(\n",
-        "  id=\"input_labels_0\",\n",
+        "label_data = tb.LocalDataset.from_pd(\n",
         "  df=label_parts[0],\n",
-        "  key_field=\"index\",\n",
-        "  load_if_exists=True\n",
+        "  key_field=\"index\"\n",
         ").get_model_labels(label_field='label')\n",
         "\n",
         "static_model = tb.HoeffdingTreeClassifier(n_classes=NUM_CLASSES)\n",
@@ -1125,18 +1121,14 @@
         "    df_part_ = data_parts[part_id_]\n",
         "    labels_part_ = label_parts[part_id_]\n",
         "\n",
-        "    input_data = tb.OnlineDataset.from_pd(\n",
-        "        id=f\"input_stream_{part_id_}\",\n",
+        "    input_data = tb.LocalDataset.from_pd(\n",
         "        df=df_part_,\n",
         "        key_field=\"index\",\n",
-        "        load_if_exists=True\n",
         "    ).get_model_inputs(numerical_fields = numerical_fields)\n",
         "\n",
-        "    label_data = tb.OnlineDataset.from_pd(\n",
-        "        id=f\"input_labels_{part_id_}\",\n",
+        "    label_data = tb.LocalDataset.from_pd(\n",
         "        df=labels_part_,\n",
-        "        key_field=\"index\",\n",
-        "        load_if_exists=True\n",
+        "        key_field=\"index\"\n",
         "    ).get_model_labels(label_field='label')\n",
         "\n",
         "    part_labels_df = labels_part_\n",
@@ -1233,18 +1225,14 @@
       ],
       "source": [
         "# initial batch model training\n",
-        "input_data = tb.OnlineDataset.from_pd(\n",
-        "  id=\"input_stream_0\",\n",
+        "input_data = tb.LocalDataset.from_pd(\n",
         "  df=data_parts[0],\n",
-        "  key_field=\"index\",\n",
-        "  load_if_exists=True\n",
+        "  key_field=\"index\"\n",
         ").get_model_inputs(numerical_fields = numerical_fields)\n",
         "\n",
-        "label_data = tb.OnlineDataset.from_pd(\n",
-        "  id=\"input_labels_0\",\n",
+        "label_data = tb.LocalDataset.from_pd(\n",
         "  df=label_parts[0],\n",
-        "  key_field=\"index\",\n",
-        "  load_if_exists=True\n",
+        "  key_field=\"index\"\n",
         ").get_model_labels(label_field='label')\n",
         "\n",
         "batch_model = tb.HoeffdingTreeClassifier(n_classes=NUM_CLASSES)\n",
@@ -1261,18 +1249,14 @@
         "    df_part_ = data_parts[part_id_]\n",
         "    labels_part_ = label_parts[part_id_]\n",
         "\n",
-        "    input_data = tb.OnlineDataset.from_pd(\n",
-        "        id=f\"input_stream_{part_id_}\",\n",
+        "    input_data = tb.LocalDataset.from_pd(\n",
         "        df=df_part_,\n",
         "        key_field=\"index\",\n",
-        "        load_if_exists=True\n",
         "    ).get_model_inputs(numerical_fields = numerical_fields)\n",
         "\n",
-        "    label_data = tb.OnlineDataset.from_pd(\n",
-        "        id=f\"input_labels_{part_id_}\",\n",
+        "    label_data = tb.LocalDataset.from_pd(\n",
         "        df=labels_part_,\n",
-        "        key_field=\"index\",\n",
-        "        load_if_exists=True\n",
+        "        key_field=\"index\"\n",
         "    ).get_model_labels(label_field='label')\n",
         "\n",
         "    part_labels_df = labels_part_\n",
@@ -1379,18 +1363,14 @@
       ],
       "source": [
         "# initial batch model training\n",
-        "input_data = tb.OnlineDataset.from_pd(\n",
-        "  id=\"input_stream_0\",\n",
+        "input_data = tb.LocalDataset.from_pd(\n",
         "  df=data_parts[0],\n",
-        "  key_field=\"index\",\n",
-        "  load_if_exists=True\n",
+        "  key_field=\"index\"\n",
         ").get_model_inputs(numerical_fields = numerical_fields)\n",
         "\n",
-        "label_data = tb.OnlineDataset.from_pd(\n",
-        "  id=\"input_labels_0\",\n",
+        "label_data = tb.LocalDataset.from_pd(\n",
         "  df=label_parts[0],\n",
-        "  key_field=\"index\",\n",
-        "  load_if_exists=True\n",
+        "  key_field=\"index\"\n",
         ").get_model_labels(label_field='label')\n",
         "\n",
         "online_model = tb.HoeffdingTreeClassifier(n_classes=NUM_CLASSES)\n",
@@ -1414,18 +1394,14 @@
         "    batch_data = merged_data.iloc[start_idx:end_idx]\n",
         "    batch_labels = merged_labels.iloc[start_idx:end_idx]\n",
         "    \n",
-        "    stream_data = tb.OnlineDataset.from_pd(\n",
-        "        id=f\"input_stream_{start_idx}_{end_idx}\",\n",
+        "    stream_data = tb.LocalDataset.from_pd(\n",
         "        df=batch_data,\n",
-        "        key_field=\"index\",\n",
-        "        load_if_exists=True\n",
+        "        key_field=\"index\"\n",
         "    ).get_model_inputs(numerical_fields = numerical_fields)\n",
         "\n",
-        "    stream_labels = tb.OnlineDataset.from_pd(\n",
-        "        id=f\"input_labels_{start_idx}_{end_idx}\",\n",
+        "    stream_labels = tb.LocalDataset.from_pd(\n",
         "        df=batch_labels,\n",
-        "        key_field=\"index\",\n",
-        "        load_if_exists=True\n",
+        "        key_field=\"index\"\n",
         "    ).get_model_labels(label_field='label')\n",
         "\n",
         "    # Store predictions and labels\n",
@@ -1593,18 +1569,14 @@
         "def online_benchmarking(stream_size=1000, window_size=5000, step_size=1000):\n",
         "    global data_parts, label_parts, numerical_fields, input_spec, NUM_CLASSES\n",
         "    # initial batch model training\n",
-        "    input_data = tb.OnlineDataset.from_pd(\n",
-        "    id=\"input_stream_0\",\n",
+        "    input_data = tb.LocalDataset.from_pd(\n",
         "    df=data_parts[0],\n",
-        "    key_field=\"index\",\n",
-        "    load_if_exists=True\n",
+        "    key_field=\"index\"\n",
         "    ).get_model_inputs(numerical_fields = numerical_fields)\n",
         "\n",
-        "    label_data = tb.OnlineDataset.from_pd(\n",
-        "    id=\"input_labels_0\",\n",
+        "    label_data = tb.LocalDataset.from_pd(\n",
         "    df=label_parts[0],\n",
-        "    key_field=\"index\",\n",
-        "    load_if_exists=True\n",
+        "    key_field=\"index\"\n",
         "    ).get_model_labels(label_field='label')\n",
         "\n",
         "    model = tb.HoeffdingTreeClassifier(n_classes=NUM_CLASSES)\n",
@@ -1628,18 +1600,14 @@
         "        batch_data = merged_data.iloc[start_idx:end_idx]\n",
         "        batch_labels = merged_labels.iloc[start_idx:end_idx]\n",
         "        \n",
-        "        stream_data = tb.OnlineDataset.from_pd(\n",
-        "            id=f\"input_stream_{start_idx}_{end_idx}\",\n",
+        "        stream_data = tb.LocalDataset.from_pd(\n",
         "            df=batch_data,\n",
-        "            key_field=\"index\",\n",
-        "            load_if_exists=True\n",
+        "            key_field=\"index\"\n",
         "        ).get_model_inputs(numerical_fields = numerical_fields)\n",
         "\n",
-        "        stream_labels = tb.OnlineDataset.from_pd(\n",
-        "            id=f\"input_labels_{start_idx}_{end_idx}\",\n",
+        "        stream_labels = tb.LocalDataset.from_pd(\n",
         "            df=batch_labels,\n",
-        "            key_field=\"index\",\n",
-        "            load_if_exists=True\n",
+        "            key_field=\"index\"\n",
         "        ).get_model_labels(label_field='label')\n",
         "\n",
         "        # Store predictions and labels\n",
