--- a/why-incremental-stateful-algorithms/comparison_with_xgboost.ipynb
+++ b/why-incremental-stateful-algorithms/comparison_with_xgboost.ipynb
@@ -1070,18 +1070,14 @@
         "\n",
         "def benchmark_and_store_results(batch_size, xgb_params):\n",
         "    # initial online model training\n",
-        "    input_data = tb.OnlineDataset.from_pd(\n",
-        "        id=\"input_stream_0\",\n",
+        "    input_data = tb.LocalDataset.from_pd(\n",
         "        df=data_parts[0],\n",
-        "        key_field=\"index\",\n",
-        "        load_if_exists=True\n",
+        "        key_field=\"index\"\n",
         "    ).get_model_inputs(numerical_fields = numerical_fields)\n",
         "\n",
-        "    label_data = tb.OnlineDataset.from_pd(\n",
-        "        id=\"input_labels_0\",\n",
+        "    label_data = tb.LocalDataset.from_pd(\n",
         "        df=label_parts[0],\n",
-        "        key_field=\"index\",\n",
-        "        load_if_exists=True\n",
+        "        key_field=\"index\"\n",
         "    ).get_model_labels(label_field='label')\n",
         "    \n",
         "    online_model = tb.HoeffdingTreeClassifier(n_classes=NUM_CLASSES)\n",
@@ -1129,18 +1125,14 @@
         "        batch_labels = merged_labels.iloc[start_idx:end_idx].squeeze()\n",
         "\n",
         "        # Incremental Learning with tb model\n",
-        "        input_data = tb.OnlineDataset.from_pd(\n",
-        "            id=f\"input_stream_{end_idx}\",\n",
+        "        input_data = tb.LocalDataset.from_pd(\n",
         "            df=batch_data,\n",
-        "            key_field=\"index\",\n",
-        "            load_if_exists=True\n",
+        "            key_field=\"index\"\n",
         "        ).get_model_inputs(numerical_fields = numerical_fields)\n",
         "\n",
-        "        label_data = tb.OnlineDataset.from_pd(\n",
-        "            id=f\"input_labels_{end_idx}\",\n",
+        "        label_data = tb.LocalDataset.from_pd(\n",
         "            df=batch_labels,\n",
-        "            key_field=\"index\",\n",
-        "            load_if_exists=True\n",
+        "            key_field=\"index\"\n",
         "        ).get_model_labels(label_field='label')\n",
         "\n",
         "        start_time_online = time.time()\n",
