fix: use updated methods

--- a/real-time-data-with-llms/prompts-with-real-time-data.ipynb
+++ b/real-time-data-with-llms/prompts-with-real-time-data.ipynb
@@ -370,7 +370,7 @@
       },
       "outputs": [],
       "source": [
-        "sample_df = transactions.input_df[-5:]"
+        "sample_df = transactions.preview_df[-5:]"
       ]
     },
     {
