--- a/real-time-streaming-data/streaming-anomaly-detection-stock-data.ipynb
+++ b/real-time-streaming-data/streaming-anomaly-detection-stock-data.ipynb
@@ -1155,7 +1155,7 @@
       "source": [
         "def sdk_upload_df(dataset, df):\n",
         "    \"\"\"Upload data using TurboML SDK\"\"\"\n",
-        "    dataset.upload_df(dataframe=df)"
+        "    dataset.add_pd(df=df)"
       ]
     },
     {
